# minectaft_rust_proxy

./: Cargo.toml  README.md
.github/workflows/: release.yml
i18n/: de.json  en.json  fr.json  jp.json  ko.json  ru.json  zh-CN.json  zh-TW.json
migrations/: 0017_init.sql
src/: access_control.rs  cli.rs  config.rs  error.rs  i18n.rs  main.rs  motd.rs
src/auth/: mod.rs  qr_map.rs  storage.rs  totp.rs
src/db/: access.rs  admin.rs  backend_servers.rs  domain_routes.rs  mod.rs  modlog.rs  sessions.rs  settings.rs  two_factor.rs  user_routes.rs
src/protocol/: chat.rs  handshake.rs  login.rs  mod.rs  nbt.rs  packet.rs  ping.rs  play.rs  registry.rs  status.rs  varint.rs  versions.rs
src/proxy/: connection.rs  limbo.rs  mod.rs  router.rs
src/web_api/: mod.rs
src/web_api/auth/: middleware.rs  mod.rs
src/web_api/handlers/: access.rs  admin.rs  auth.rs  backend.rs  cli_handler.rs  config.rs  logs.rs  migration.rs  mod.rs  players.rs  routes.rs  server.rs  server_ping.rs  two_factor.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.vue
web/src/api/: index.ts
web/src/composables/: useTimezone.ts
web/src/i18n/: index.ts
web/src/i18n/locales/: de.json  en.json  fr.json  ja.json  ko.json  ru.json  zh-CN.json  zh-TW.json
web/src/layouts/: AppLayout.vue
web/src/pages/: Access.vue  Account.vue  Backend.vue  Config.vue  Dashboard.vue  Login.vue  Logs.vue  Players.vue  Routes.vue  Setup.vue  TwoFactor.vue
web/src/router/: index.ts
web/src/store/: app.ts
