[package]
name = "minecraft-rust-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8", features = ["multipart"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "2"
dashmap = "6"
rand = "0.8"
hex = "0.4"
hmac = "0.12"
sha1 = "0.10"
base32 = "0.5"
qrcode = "0.14"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
flate2 = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2"
tower-http = { version = "0.5", features = ["fs", "compression-gzip"] }
jsonwebtoken = "9"
bcrypt = "0.15"
totp-rs = "5"
zip = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
